# paper-prowler

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml
.github/: cron.yml
.github/workflows/: cron.yml  docs.yml
dev/: 404.html  index.html  sitemap.xml
dev/SUMMARY/: index.html
dev/scripts/: create_arxiv_pages.py  prowl_arxiv.py
dev/search/: search_index.json
dev/sections/papers/: index.html
dev/sections/papers/-1248789065901567155/1b2b11a90753f096660e31ed0f2544b4479500627a8415268d94e33f3915e85b/: index.html
dev/sections/papers/-1248789065901567155/28d24a1dcc1e849173edb68238fd4ce42ee6bdedf6789b8d43d038142d42c5f1/: index.html
dev/sections/papers/-1248789065901567155/3baee9d2fe77db6122aeb2d0f72b0b51f6393cde2676ea079c23ff2f1ba25539/: index.html
dev/sections/papers/-1248789065901567155/4f2938c0796c1cb7c6deb232cf489bd37c86fec5b6949321d1f09450eab2ba6a/: index.html
dev/sections/papers/-1248789065901567155/5ae61d4f0c8bb762479a22d3fb4c1155077d5b3ae5d1affb4f5fc8397ccc44ee/: index.html
dev/sections/papers/-1248789065901567155/621f2ed5b623ffdbb85483c6bfe4b7d88320bad9abdb32aeffd9910562368257/: index.html
dev/sections/synthetic_data/: index.html
docs/: SUMMARY.md  index.md
docs/scripts/: create_rss_pages.py  prowl_arxiv.py  prowl_rss.py
docs/sections/synthetic_data/: index.md
scripts/: prowl_arxiv.py
src/data/: database.json
src/paper_prowler/: __init__.py  constants.py  database.py  logging.py  synthesizer.py
src/paper_prowler/prowlers/: __init__.py  arxiv.py  base.py  rss.py
(+311 files in other folders)
